// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Scheduled /> should match the default snapshot 1`] = `
Array [
  <div
    className="sc-bZQynM cccIja"
  >
    <div
      className="sc-gqjmRU kwEKRP"
    >
      <ul
        className="sc-VigVT hWopXp"
      >
        <li
          className="sc-jTzLTM cCidJu"
        >
          <span>
            Home
          </span>
        </li>
      </ul>
    </div>
  </div>,
  <div
    className="sc-iwsKbI eKLVrf"
  >
    <div
      className="sc-gZMcBi dcMSXI"
    >
      <h1
        className="sc-EHOje bsIerq"
        data-qa="page-heading-text"
      >
        Schedule for Test User
      </h1>
      <div>
        <div
          className="sc-fjdhpX bRCAPC"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          <span>
            Print this page
          </span>
        </div>
      </div>
    </div>
    <div
      className="page-content"
    >
      <div
        className="sc-chPdSV kYKrpt"
      >
        <label
          className="sc-bwzfXH drtIuJ"
        >
          <input
            checked="checked"
            className="sc-htpNat gUOYBv"
            id="thisWeek"
            name="radio-inline-group"
            onChange={[Function]}
            onClick={[Function]}
            type="radio"
            value="Yes"
          />
          <span
            className="sc-bxivhb eArzwx"
          >
            This week
          </span>
        </label>
        <label
          className="sc-bwzfXH drtIuJ"
        >
          <input
            checked={undefined}
            className="sc-htpNat gUOYBv"
            id="nextWeek"
            name="radio-inline-group"
            onChange={[Function]}
            onClick={[Function]}
            type="radio"
            value="Yes"
          />
          <span
            className="sc-bxivhb eArzwx"
          >
            Next week
          </span>
        </label>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Wednesday
           
          <span>
            02/27/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Thursday
           
          <span>
            02/28/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Friday
           
          <span>
            03/01/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              <div
                className="sc-jzJRlG iBAIcT"
              >
                <span
                  className="whereabouts-startTime"
                >
                  10:00
                </span>
                 
                - 
                <span
                  className="whereabouts-endTime"
                >
                   
                  10:10
                   
                </span>
                <div
                  className="sc-cSHVUG llyQws"
                >
                  Careers Adviser Appointment
                </div>
                I'm a recurring bulk appointment.
              </div>
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Saturday
           
          <span>
            03/02/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Sunday
           
          <span>
            03/03/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Monday
           
          <span>
            03/04/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Tuesday
           
          <span>
            03/05/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              <div
                className="sc-jzJRlG iBAIcT"
              >
                <span
                  className="whereabouts-startTime"
                >
                  13:00
                </span>
                 
                - 
                <span
                  className="whereabouts-endTime"
                >
                   
                  14:00
                   
                </span>
                <div
                  className="sc-cSHVUG llyQws"
                >
                  Another appointment
                </div>
                I'm another appointment.
              </div>
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-fjdhpX bRCAPC"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    tabIndex={0}
  >
    <span>
      Print this page
    </span>
  </div>,
]
`;

exports[`<Scheduled /> should match the snapshot with a cancelled event 1`] = `
Array [
  <div
    className="sc-bZQynM cccIja"
  >
    <div
      className="sc-gqjmRU kwEKRP"
    >
      <ul
        className="sc-VigVT hWopXp"
      >
        <li
          className="sc-jTzLTM cCidJu"
        >
          <span>
            Home
          </span>
        </li>
      </ul>
    </div>
  </div>,
  <div
    className="sc-iwsKbI eKLVrf"
  >
    <div
      className="sc-gZMcBi dcMSXI"
    >
      <h1
        className="sc-EHOje bsIerq"
        data-qa="page-heading-text"
      >
        Schedule for Test User
      </h1>
      <div>
        <div
          className="sc-fjdhpX bRCAPC"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          <span>
            Print this page
          </span>
        </div>
      </div>
    </div>
    <div
      className="page-content"
    >
      <div
        className="sc-chPdSV kYKrpt"
      >
        <label
          className="sc-bwzfXH drtIuJ"
        >
          <input
            checked="checked"
            className="sc-htpNat gUOYBv"
            id="thisWeek"
            name="radio-inline-group"
            onChange={[Function]}
            onClick={[Function]}
            type="radio"
            value="Yes"
          />
          <span
            className="sc-bxivhb eArzwx"
          >
            This week
          </span>
        </label>
        <label
          className="sc-bwzfXH drtIuJ"
        >
          <input
            checked={undefined}
            className="sc-htpNat gUOYBv"
            id="nextWeek"
            name="radio-inline-group"
            onChange={[Function]}
            onClick={[Function]}
            type="radio"
            value="Yes"
          />
          <span
            className="sc-bxivhb eArzwx"
          >
            Next week
          </span>
        </label>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Wednesday
           
          <span>
            02/27/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Thursday
           
          <span>
            02/28/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Friday
           
          <span>
            03/01/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              <div
                className="sc-jzJRlG iBAIcT"
              >
                <span
                  className="whereabouts-startTime"
                >
                  10:00
                </span>
                 
                - 
                <span
                  className="whereabouts-endTime"
                >
                   
                  10:10
                   
                </span>
                <div
                  className="sc-cSHVUG llyQws"
                >
                  Careers Adviser Appointment
                </div>
                I'm a recurring bulk appointment.
              </div>
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Saturday
           
          <span>
            03/02/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Sunday
           
          <span>
            03/03/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              <div
                className="sc-jzJRlG iBAIcT"
              >
                <span
                  className="whereabouts-startTime"
                >
                  11:00
                </span>
                 
                - 
                <span
                  className="whereabouts-endTime"
                >
                   
                  11:30
                   
                </span>
                <div
                  className="sc-cSHVUG llyQws"
                >
                  Another appointment
                </div>
                I'm another appointment.
                <span
                  className="cancelled"
                >
                   (cancelled)
                </span>
              </div>
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Monday
           
          <span>
            03/04/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY hSLMZT"
      >
        <h2
          className="sc-EHOje efHrfh"
        >
          Tuesday
           
          <span>
            03/05/2019
          </span>
        </h2>
        <div
          className="sc-kgoBCf jfKcsb"
        >
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Morning (AM)
            </h3>
            <div
              className="sc-kpOJdX eJcUWQ"
              value="morning"
            >
              No scheduled events.
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Afternoon (PM)
            </h3>
            <div
              className="sc-kpOJdX hOXoXg"
              value="afternoon"
            >
              <div
                className="sc-jzJRlG iBAIcT"
              >
                <span
                  className="whereabouts-startTime"
                >
                  13:00
                </span>
                 
                - 
                <span
                  className="whereabouts-endTime"
                >
                   
                  14:00
                   
                </span>
                <div
                  className="sc-cSHVUG llyQws"
                >
                  Another appointment
                </div>
                I'm another appointment.
              </div>
            </div>
          </div>
          <div
            className="sc-kGXeez jCeSwQ"
          >
            <h3
              className="sc-EHOje RpDGg"
            >
              Evening Duty (ED)
            </h3>
            <div
              className="sc-kpOJdX cEnUtU"
              value="evening"
            >
              No scheduled events.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-fjdhpX bRCAPC"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="link"
    tabIndex={0}
  >
    <span>
      Print this page
    </span>
  </div>,
]
`;
